# rk3588_read_video

./: CMakeLists.txt  README.md
src/: cam_mpp_opencv.cpp  cam_mpp_rga.cpp  cam_opencv.cpp  cam_v4l2_opencv.cpp  cam_v4l2_rga.cpp  file_mpp_rga.cpp  file_opencv.cpp  resize_demo.cpp
